fix: FE BootcampManagement -> tables misalignment

--- a/frontend/src/components/Forms/AddNewBootcampForm.css
+++ b/frontend/src/components/Forms/AddNewBootcampForm.css
@@ -4,12 +4,12 @@
 }
 
 .auto-table {
-    width: 100%;
-    table-layout: auto;
+    width: 98%;
+    /* table-layout: auto; */
 }
 
 .input-cell {
-    padding-right: 1.5rem;
+    padding-right: 0.75rem;
 }
 
 .date-cell {
@@ -18,15 +18,18 @@
 
 .text-input,
 .date-input {
-    width: 100%;
     margin-top: 0.25rem;
     display: block;
+    width: 100%;
     padding: 0.5rem 0.75rem;
-    /* border: 1px solid #d1d5db2d; */
+    border: 1px solid #d1d5db;
     border-radius: 0.375rem;
-    background-color: #20202a;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
     font-size: 0.875rem;
+    background-color: #20202a;
+    border: none;
+    color: #cacad4;
+    transition: all 150ms ease;
 }
 
 .text-input:focus,
